--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -796,46 +796,52 @@
         font-size: 1.9rem;
       }
     }
-  }
 
-  .todos-page {
-    .project.title {
-      padding-right: 2rem;
-    }
+    .todos-page {
+      .todos-page__project-title {
+        margin-bottom: 4rem;
+      }
 
-    .no-todos-info {
-      text-align: center;
-      left: 55%;
-      top: 50%;
-      font-size: 1.8rem;
-      width: 80%;
-    }
+      .no-todos-info {
+        text-align: center;
+        left: 55%;
+        top: 50%;
+        font-size: 1.8rem;
+        width: 80%;
+      }
 
-    .todos-page__todos-list {
-      place-items: center;
-      grid-template-columns: 1fr;
-      padding: 1rem 2rem;
-      gap: 2rem;
+      .todos-page__todos-list {
+        place-items: center;
+        grid-template-columns: 1fr;
+        padding: 1rem 2rem;
+        gap: 2rem;
 
-      .card {
-        .card__title {
-          font-size: 1.3rem;
-        }
-        width: clamp(40ch, 50%, 80ch);
-        #todo-check {
-          top: 1.3rem;
-          left: 0.5rem;
-          height: 1rem;
+        .card {
+          width: clamp(40ch, 50%, 80ch);
+
+          .card__title {
+            font-size: 1.3rem;
+          }
+
+          #todo-check {
+            top: 1.3rem;
+            left: 0.5rem;
+            height: 1rem;
+          }
+
+          &:last-child {
+            margin-bottom: 2rem;
+          }
         }
       }
     }
-
     .add-todo-btn {
-      top: 0.7rem;
-      right: 0.2rem;
-      height: 2rem;
-      width: 5rem;
-      font-size: 1rem;
+      top: 4.3rem;
+      right: 50%;
+      transform: translateX(50%);
+      height: 2.5rem;
+      width: 8rem;
+      font-size: 1.5rem;
     }
   }
   .modal {
